# gauss

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: float_matrix.rs  lib.rs  matrix.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: common.rs  float_matrix.rs  lib.rs  macros.rs  matrix.rs
tests/: tests.rs
