[package]
name = "gauss_macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "gauss_macros"
proc-macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gauss_core = { path = "../core"}
quote = "1.0.33"
syn = "2.0.41"
